# auctionpie

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.rst  db.sqlite3  docker-compose.yaml  env.django.local  env.postgres.local  mypy.ini  pyproject.toml  pytest.ini
auction/: admin.py  apps.py  mutations.py  schema.py  tasks.py  types.py  views.py
auction/helpers/: graphql.py
auction/migrations/: 0001_initial.py  0002_clientdata.py  0003_auto_20210114_0811.py  0004_auto_20210114_0848.py  0005_product.py  0006_product_end_date.py  0007_bid.py  0008_auto_20210114_1704.py  0009_auto_20210114_1855.py  0009_final_20210131_1800.py  0010_auto_20210114_1933.py  0010_insert_company.py  0011_auto_20210114_1934.py  0011_auto_20210214_2026.py  0012_auto_20210114_1935.py  0012_auto_20210302_1412.py  0013_remove_client_is_staff.py  0014_client_is_admin.py  0015_remove_client_is_confirmed.py  0016_auto_20210116_1023.py  0017_auto_20210116_1027.py  0018_company.py  0019_insert_company.py  0020_auto_20210121_1427.py  0021_auto_20210121_1819.py  0022_auto_20210124_1151.py  0023_auto_20210124_1830.py  0024_auto_20210124_1920.py  0025_auto_20210125_1110.py  0026_auto_20210127_1623.py
auction/models/: __init__.py  bid.py  client.py  client_data.py  company.py  deal.py  product.py
auction/structures/: graphql.py
auction/tests/: __init__.py  fixures.py  test_schema.py  test_tasks.py
billing/: admin.py  meta.py  models.py  schema.py  strategies.py  tasks.py
billing/helpers/: graphql.py
billing/migrations/: 0001_initial.py  0002_auto_20210119_0518.py  0003_auto_20210119_1500.py  0004_auto_20210119_1514.py  0005_auto_20210121_0941.py  0006_payment.py  0007_auto_20210214_2040.py  0008_auto_20210214_2041.py  0009_auto_20210221_0510.py  0010_auto_20210225_1113.py
billing/models/: __init__.py  base.py  bill.py  payment.py  (+1 more)
core/: celery.py  errors.py  schema.py  settings.py  urls.py
doc/: get_graphql_doc.py  get_introspection.py
tests/: test_auctionpie.py
(+28 files in other folders)
