[tool.poetry]
name = "auctionpie"
version = "0.1.0"
description = ""
license = "BSD"
authors = ["Sergey M <magaster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
Django = "^3.1.5"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
