[tool.poetry]
name = "auctionpie"
version = "0.1.0"
description = ""
license = "BSD"
authors = ["Sergey M <magaster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
graphene-django = "^2.15.0"
django-graphql-auth = "^0.3.15"
PyJWT = "1.7.1"
pydantic = "^1.7.3"
celery = "4.4.7"
redis = "^3.5.3"
psycopg2 = "^2.8.6"
tblib = "^1.7.0"
django-celery-beat = "^2.2.0"
flower = "^0.9.7"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
coverage = {extras = ["toml"], version = "^5.3.1"}
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.7.0"
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py38']

[tool.coverage.run]
source = ['./']
